@@ -1,3 +1,7 @@
+2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* sysdeps/x86_64/x32/dl-machine.h: New file.
+
 2012-05-14  Andreas Jaeger  <aj@suse.de>
 
 	* manual/Makefile (subdir): Remove export of subdir.
